--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -235,12 +235,7 @@ padding-bottom: 15px;
   
 }
 
-.inner-content-signup{
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6); /* deslocamento X, Y, desfoque, cor */
-  border-radius: 10px;
-  padding: 10px;
-    /* background-color: #d9d9d9; */
-}
+
 
 .section-signup input{
   border-color: black;
@@ -757,6 +752,47 @@ input[type="checkbox"] {
 .selected-row {
   background-color: rgba(73, 119, 162, 1); /* verde claro */
 }
+.main-content-signup {
+  margin-left: 150px;
+  margin-top: 37vh;
+  /* Removido display: grid */
+  height: 10vh;
+  display: flex;
+  flex-direction: column;
+  
+  /* Adicionadas as propriedades para centralizar */
+  align-items: center;
+  justify-content: center;
+}
+
+.main-content-signup-pessoa {
+  margin-left: 150px;
+  margin-top: 7vh;
+  /* Removido display: grid */
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  /* Adicionadas as propriedades para centralizar */
+  align-items: center;
+  justify-content: center;
+
+}
+
+.inner-content-signup{
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6); /* deslocamento X, Y, desfoque, cor */
+  border-radius: 10px;
+  padding: 10px;
+  flex-direction: column;
+  gap: 50px;
+    /* background-color: #d9d9d9; */
+  font-size: larger;
+}
+
+.inner-content-signup label{
+  margin-top: 10px;
+}
+
 
 .main-content-signup-movie{
   display: flex;
