--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -9,7 +9,7 @@ button{
 header{
   position: fixed;
   background-color: rgba(73, 119, 162, 1);
-  height: 10%;
+  height: 12%;
   left: 0;
   right: 0;
   top:0;
@@ -20,15 +20,56 @@ header h1{
   margin-left: 20px;
   margin-bottom: 10px
 }
+
+.container {
+  /* Isso faz o container ocupar o espaço restante abaixo do header */
+  flex-grow: 1;
+  
+  /* Usa Flexbox para centralizar o formulário dentro do container */
+  display: flex;
+  justify-content: center;
+
+  align-items: center;
+}
+
 #login-btn{
   background-color:#4DB1F8;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 300px;
+  width: 270px;
   height: 25px;
   margin-top:20px;
+}
+
+#section-access-login{
+  display:flex;
+  flex-direction: column;    /* <-- Isso faz os elementos ficarem em coluna (um abaixo do outro) */
+  justify-content: center;  /* Centraliza horizontalmente */
+  align-items: center;      /* Centraliza verticalmente */
+  height: 50vh;
+  text-align: left;
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  font-size: 10px;
+  margin-top: 30%;
+  margin-bottom: 8px;
+  gap:7px;
+}
+
+.section-access a{
+  color: #007bff;
+  font-size: larger;
+  font-weight: bolder;
+}
+
+.main-content-signup-user{
+  margin-top: 60px;
+}
+
+.section-access a:hover{
+cursor: pointer;
 }
 
 /*div login*/
@@ -65,6 +106,23 @@ header h1{
   margin-bottom: 5px;
   font-size: 18px;
 }
+
+.inner-content{
+  margin-top: 60px;
+  margin-BOTTOM: 150px;
+  display:flex;
+  flex-direction: column;    /* <-- Isso faz os elementos ficarem em coluna (um abaixo do outro) */
+  justify-content: center;  /* Centraliza horizontalmente */
+  align-items: center;      /* Centraliza verticalmente */
+  gap: 20px;
+}
+
+.inner-content label{
+  margin-top: 20px;
+
+}
+
+
 
 .sidebar {
   position: fixed;
